--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 	<script>
 		var downloadClientApp = function() {
 			// 在此用到配置文件(Mytest.plist)的外部链接
-			window.location.href='itms-services:///?action=download-manifest&url=123.plist';
+			window.location.href='itms-services://?action=download-manifest&url==123.plist';
 		}
 	</script>
 </body>
