--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 	<script>
 		var downloadClientApp = function() {
 			// 在此用到配置文件(Mytest.plist)的外部链接
-			window.location.href='itms-services://?action=download-manifest&url=https://zc206222.github.io/cscr000/123.plist;
+			window.location.href='itms-services://?action=download-manifest&url=https://zc206222.github.io/cscr000/123.plist';
 		}
 	</script>
 </body>
