--- a/index.html
+++ b/index.html
@@ -89,25 +89,7 @@
 		}
 	</style>
 </head>
-<body>
-	<div class="download_div">
-		<p class="download_title">测试安装包</p>
-		<img class="img_app_overview" src="img_app_overview.png" alt="Mr.chao">
-		<div class="download_button">
-			<button class="button button_green button_top" onclick="downloadClientApp();"><a href="javascript:void(0);">点击安装app</a></button>
-			<!-- <button class="button button_green button_top"><a href="{{androidAUrl}}">Android客户端下载</a></button> -->
-			<div class="download_tips">
-				<strong>微信扫描</strong>下载,<strong>请点击右上角</strong>,<br />选择“<strong>在浏览器中打开</strong>”即可安装下载
-			</div>
-		</div>
-	</div>
-	<script>
-		var downloadClientApp = function() {
-			// 在此用到配置文件(Mytest.plist)的外部链接
-			window.location.href='itms-services://?action=download-manifest&url==123.plist';
-		}
-	</script>
-</body>
+
 <body>
 	<div class="download_div">
 		<p class="download_title">越狱ej</p>
@@ -123,7 +105,7 @@
 	<script>
 		var downloadClientApp = function() {
 			// 在此用到配置文件(Mytest.plist)的外部链接
-			window.location.href='itms-services://?action=download-manifest&url=https://zc206222.github.io/cscr000/123.plist';
+			window.location.href='itms-services://?action=download-manifest&url=http://zc206222.github.io/cscr000/123.plist';
 		}
 	</script>
 </body>
